# HybridDBT-benchmarks

./: CMakeLists.txt  LICENSE  README.md  benchmarkLib.py  oarruns.py  runLib.py
Mediabench/: CMakeLists.txt
Mediabench/adpcm/: CMakeLists.txt
Mediabench/adpcm/exec/: sdecode.sh  sencode.sh
Mediabench/adpcm/results/: out.pcm
Mediabench/epic/: CMakeLists.txt
Mediabench/epic/exec/: sdecode.sh  sencode.sh
Mediabench/g721/: CMakeLists.txt
Mediabench/g721/exec/: sdecode.sh  sencode.sh
Mediabench/ghostscript/src/: CMakeLists.txt  Makefile  echogs  genconf
Mediabench/gsm/: CMakeLists.txt
Mediabench/gsm/exec/: sdecode.sh  sencode.sh
Mediabench/gsm/src/: CMakeLists.txt  a.out  rpe.c  toast.c
Mediabench/jpeg/: CMakeLists.txt
Mediabench/jpeg/exec/: sdecode.sh  sencode.sh
Mediabench/jpeg/jpeg/: CMakeLists.txt  bitmap.h  dct8x8.c  jpegenc.c  jpegenc.h  main.c  test_dct8.c  test_dct8x8.c
Mediabench/jpeg/jpeg-6a/: jidctfst.c  jidctint.c
Mediabench/mpeg2/: CMakeLists.txt
Mediabench/mpeg2/data/: out.m2v  tmp0.U  tmp0.V  tmp0.Y  tmp1.U  tmp1.V  tmp1.Y  tmp2.U  tmp2.V  tmp2.Y  tmp3.U  tmp3.V  tmp3.Y
Mediabench/mpeg2/exec/: sdecode.sh  sencode.sh
Mediabench/mpeg2/src/mpeg2dec/: idct.c
Mediabench/mpeg2/test/: stat.out
Mediabench/pegwit/data/: pegwitenc.shade
Mediabench/pegwit/exec/: runme
Mediabench/pegwit/src/: CMakeLists.txt  Makefile  square.c
Mediabench/pgp/src/: Makefile
Mediabench/rasta/: CMakeLists.txt
Mediabench/rasta/src/: Makefile
Polybench/all/: CMakeLists.txt
Polybench/all/2mm/: 2mm.c  2mm.h  2mm.pluto.cloog  CMakeLists.txt
Polybench/all/3mm/: 3mm.c  3mm.pluto.cloog  CMakeLists.txt
Polybench/all/adi/: CMakeLists.txt  adi.h
Polybench/all/atax/: CMakeLists.txt  atax.c  atax.pluto.cloog
Polybench/all/bicg/: CMakeLists.txt  bicg.c  bicg.pluto.cloog
Polybench/all/cholesky/: CMakeLists.txt  cholesky.c  cholesky.h  cholesky.pluto.cloog
Polybench/all/correlation/: CMakeLists.txt  correlation.c  correlation.h  correlation.pluto.cloog
Polybench/all/covariance/: CMakeLists.txt  covariance.c  covariance.pluto.cloog
Polybench/all/deriche/: CMakeLists.txt  deriche.c  deriche.h  deriche.old.pluto.cloog
Polybench/all/doitgen/: CMakeLists.txt  doitgen.h
Polybench/all/durbin/: CMakeLists.txt  durbin.h
Polybench/all/fdtd-2d/: CMakeLists.txt  fdtd-2d.h
Polybench/all/floyd-warshall/: CMakeLists.txt  floyd-warshall.c  floyd-warshall.pluto.cloog
Polybench/all/gemm/: CMakeLists.txt  gemm.c  gemm.pluto.cloog
Polybench/all/gemver/: CMakeLists.txt  gemver.c  gemver.pluto.cloog
Polybench/all/gesummv/: CMakeLists.txt  gesummv.c  gesummv.h  gesummv.pluto.cloog
Polybench/all/gramschmidt/: CMakeLists.txt  gramschmidt.c  gramschmidt.h  gramschmidt.pluto.cloog
Polybench/all/heat-3d/: CMakeLists.txt  heat-3d.c  heat-3d.h  heat-3d.pluto.cloog
Polybench/all/jacobi-1d/: CMakeLists.txt  jacobi-1d.c  jacobi-1d.pluto.cloog
Polybench/all/jacobi-2d/: CMakeLists.txt  jacobi-2d.c  jacobi-2d.h  jacobi-2d.pluto.cloog
Polybench/all/lu/: CMakeLists.txt  lu.c  lu.pluto.cloog
Polybench/all/ludcmp/: CMakeLists.txt  ludcmp.c  ludcmp.pluto.cloog
Polybench/all/mvt/: CMakeLists.txt  mvt.c  mvt.pluto.cloog
Polybench/all/nussinov/: CMakeLists.txt  nussinov.c  nussinov.pluto.cloog
Polybench/all/seidel-2d/: CMakeLists.txt  seidel-2d.c  seidel-2d.h  seidel-2d.pluto.cloog
Polybench/all/symm/: CMakeLists.txt
Polybench/all/syr2k/: CMakeLists.txt  syr2k.c  syr2k.pluto.cloog
Polybench/all/syrk/: CMakeLists.txt  syrk.c  syrk.pluto.cloog
Polybench/all/trisolv/: CMakeLists.txt  trisolv.c  trisolv.pluto.cloog
Polybench/all/trmm/: CMakeLists.txt  trmm.c  trmm.pluto.cloog
Polybench/utilities/: polybench.c
scripts/: big.py
